tests/NormalTests/paczka1/small_fuzzy/73382809.err
Error in line 3: S699 A853 99,7
Error in line 9: NGkrnS7 S699 31,5
Error in line 16: NGkrnS7 A853 35,79
